language/move-lang/tests/move_check/typing/return_type_last_exp_invalid.exp
error: 

   ┌── tests/move_check/typing/return_type_last_exp_invalid.move:4:15 ───
   │
 4 │     fun t0(): u64 {
   │               --- Is not compatible with: 'u64'
 5 │         ()
   │         -- The type: '()'
   │         ^^ Invalid return expression
   │

error: 

   ┌── tests/move_check/typing/return_type_last_exp_invalid.move:8:15 ───
   │
 8 │     fun t1(): () {
   │               -- Is not compatible with: '()'
 9 │         0
   │         - The type: integer
   │         ^ Invalid return expression
   │

error: 

    ┌── tests/move_check/typing/return_type_last_exp_invalid.move:12:15 ───
    │
 12 │     fun t2(): (u64, bool) {
    │               ----------- Is not compatible with the expression list type of length 2: '(u64, bool)'
 13 │         (0, false, R{})
    │         --------------- The expression list type of length 3: '({integer}, bool, 0x8675309::M::R)'
    │         ^^^^^^^^^^^^^^^ Invalid return expression
    │

error: 

    ┌── tests/move_check/typing/return_type_last_exp_invalid.move:16:15 ───
    │
 16 │     fun t3(): (u64, bool, R, bool) {
    │               -------------------- Is not compatible with the expression list type of length 4: '(u64, bool, 0x8675309::M::R, bool)'
 17 │         (0, false, R{})
    │         --------------- The expression list type of length 3: '({integer}, bool, 0x8675309::M::R)'
    │         ^^^^^^^^^^^^^^^ Invalid return expression
    │

error: 

    ┌── tests/move_check/typing/return_type_last_exp_invalid.move:20:16 ───
    │
 20 │     fun t4(): (bool, u64, R) {
    │                ---- Is not compatible with: 'bool'
 21 │         (0, false, R{})
    │         ^^^^^^^^^^^^^^^ Invalid return expression
    │          - The type: integer
    │

